# space

./: .gitignore  Makefile  Makefile.in  README.md  configure.ac  pack.pl
c/: Index.cc  Index.h  Search.cc  Search.h  Shapes.cc  Shapes.h  debug.cc  debug.h  globals.cc  globals.h  lock.cc  lock.h  space.cc
doc/: .gitignore  Makefile  space.doc
prolog/: demo_space.pl  georss.pl  gml.pl  space_web_loader.pl  spacetimeindex.pl  test_space.pl  wgs84.pl  wkt.pl
prolog/space/: dbpedia.pl  demo_space.pl  freebase.pl  georss.pl  gml.pl  kml.pl  pltotex.pl  space.pl  space_web_loader.pl  spacetimeindex.pl  test_space.pl  timeindex.pl  wgs84.pl  wkt.pl
test/: clearways.rdf  test_space.pl
